; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdp.c_process_pointer_pdu.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdp.c_process_pointer_pdu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"Pointer message 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @process_pointer_pdu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_pointer_pdu(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @in_uint16_le(i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @in_uint8s(i32 %11, i32 2)
  %13 = load i32, i32* %5, align 4
  switch i32 %13, label %42 [
    i32 129, label %14
    i32 130, label %30
    i32 131, label %34
    i32 128, label %38
  ]

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @in_uint16_le(i32 %15, i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @in_uint16_le(i32 %18, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @s_check(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %14
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @ui_move_pointer(i32* %25, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %14
  br label %45

30:                                               ; preds = %2
  %31 = load i32*, i32** %3, align 8
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @process_colour_pointer_pdu(i32* %31, i32 %32)
  br label %45

34:                                               ; preds = %2
  %35 = load i32*, i32** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @process_cached_pointer_pdu(i32* %35, i32 %36)
  br label %45

38:                                               ; preds = %2
  %39 = load i32*, i32** %3, align 8
  %40 = load i32, i32* %4, align 4
  %41 = call i32 @process_system_pointer_pdu(i32* %39, i32 %40)
  br label %45

42:                                               ; preds = %2
  %43 = load i32, i32* %5, align 4
  %44 = call i32 @unimpl(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %43)
  br label %45

45:                                               ; preds = %42, %38, %34, %30, %29
  ret void
}

declare dso_local i32 @in_uint16_le(i32, i32) #1

declare dso_local i32 @in_uint8s(i32, i32) #1

declare dso_local i32 @s_check(i32) #1

declare dso_local i32 @ui_move_pointer(i32*, i32, i32) #1

declare dso_local i32 @process_colour_pointer_pdu(i32*, i32) #1

declare dso_local i32 @process_cached_pointer_pdu(i32*, i32) #1

declare dso_local i32 @process_system_pointer_pdu(i32*, i32) #1

declare dso_local i32 @unimpl(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
